--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
   "repository"    : {"type": "git", "url": "git://github.com/pgostovic/phnq_ejs.git"},
   "main"          : "phnq_ejs.js",
   "version"       : "1.0.0",
-  "dependencies"  : { "phnq_log": "1.0.1" }
+  "dependencies"  :
+  {
+  	"phnq_log": "1.0.x",
+  	"phnq_core": "1.0.x"
+  }
 }
