--- a/package.json
+++ b/package.json
@@ -10,6 +10,15 @@
   "dependencies"  :
   {
   	"phnq_log": "1.0.x",
-  	"phnq_core": "1.0.x"
+  	"phnq_core": "1.0.x",
+    "mocha": "1.6.0"
+  },
+  "scripts"       :
+  {
+    "test": "mocha"
+  },
+  "engines"       :
+  {
+    "node": "0.8.x"
   }
 }
